improved dark mode and cards

--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin: auto;
     /* background-color: aqua; */
-    justify-content: space-around;
+    justify-content: safe;
 }
 .sub-head{
     font-family: rock;
@@ -11,4 +11,8 @@
 @font-face {
     font-family: rock;
     src: url(./Rocksalt.ttf);
+}
+.card-item{
+    width: "23rem";
+    margin-top: "4em"
 }
